begin positional feature implementation
